	- [L2T_PROCESS] Added a few more allowed characters in the keyword list
	- [proftpd_xferlog input] Willi Ballenthin added a new module to parse the ProFTPD XFerlog file
	- [Log2Timeline library] Fixed a bug, when the 'all' moduiles option is used (or -f is omitted) no modules get loaded
		Added a small change to try to parse the MFT directly even though the $MFT might not be directly visible

Version 0.61 (26/09/2011)
	- [log2timeline] Small changes to the version printing (now prints just the last portion of the path)
		- Now the engine checks if the format field is set and omits it if its set (to facilitate input modules like CSV that define it)
		- Changed the list modules, added the SAM database readout in the winxp and win7 list files.
		- Created the winsrv list file
		- Added the MFT module to all windows list files (just in case they use a driver that displays the $MFT file)
		- Fixed an issue with the tool not accepting the described format of the offset variable (should be +- int with the appended hms (optional))
		- Added a try/catch around get_time, http://bugs.log2timeline.net/show_bug.cgi?id=2
	- [L2T_CSV input] Added an input module that reads the CSV format of log2timeline (done to make it easier to convert CSV files into another format)
	- [extra/bash_completion] Added a bash_completion script, stored inside the extra/bash_completion.d directory (need to copy it manually in the first go)
		- Can make it easier to complete the paramaters to the tool in *NIX
	- [l2t_process] Fixed some timezone settings, or more created some temporary solutions to bug http://bugs.log2timeline.net/show_bug.cgi?id=4
	- [SQLITE output] Changed the schema considerably, along other smaller changes to the SQLite output
	- [TIME library] Fixed a bug in ftk2date (http://bugs.log2timeline.net/show_bug.cgi?id=7) - timestamps without ms values are not properly parsed
	- [PREFETCH input] Slightly modified the debug information in the verification step