@@ -4,6 +4,11 @@ Version 0.62
 	- [proftpd_xferlog input] Willi Ballenthin added a new module to parse the ProFTPD XFerlog file
 	- [Log2Timeline library] Fixed a bug, when the 'all' moduiles option is used (or -f is omitted) no modules get loaded
 		Added a small change to try to parse the MFT directly even though the $MFT might not be directly visible
+		Fixed a small bug whereas the tool would crash if the local timezone was used.
+	- [EVTX input] Fixed a bug in where the tool could go into a endless loop in the case where you have a EVTX that is 
+	somehow broken and the function get_next_event dies. If the tool runs into such occurance it returned an empty
+	timestamp object, that in turn let the tool query for it again, thus possibly getting into an endless loop.
+	Added a counter so the tool tries to get the next event 50 times, otherwise it will die.
 
 Version 0.61 (26/09/2011)
 	- [log2timeline] Small changes to the version printing (now prints just the last portion of the path)
